@@ -1,3 +1,8 @@
+2005-08-04 16:05 Mike Park  <mike.park@nasa.gov>
+
+	* src/gridinsert.c (gridReconstructSplitEdgeRatio) refactored to
+	test face0 and face1 subfaces independently.
+
 2005-08-04 14:20 Mike Park  <mike.park@nasa.gov>
 
 	* src/gridinsert.c (gridReconstructSplitEdgeRatio) return EMPTY
